[package]
name = "notus-simulator"
version = "0.1.0"
authors = ["mambisi <lilbizi96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notus = { git = "https://github.com/mambisi/notus.git", branch = "tezedge-optimized" }